@@ -6,13 +6,12 @@ import java.util.Comparator;
 import java.util.regex.Pattern;
 
 import org.cubexmc.metro.manager.LineManager;
+import org.cubexmc.metro.model.FareRule;
 import org.cubexmc.metro.model.Line;
 import org.cubexmc.metro.model.LineStatus;
 import org.cubexmc.metro.model.Portal;
-import org.cubexmc.metro.model.PriceRule;
 import org.cubexmc.metro.model.Stop;
-import org.cubexmc.metro.event.LineStatusChangeEvent;
-import org.bukkit.Bukkit;
+import java.util.stream.Collectors;
 
 /**
  * Business operations used by line commands.
@@ -43,7 +42,29 @@ public class LineCommandService {
         CIRCULAR_INVALID_INDEX
     }
 
-    public record AddStopResult(WriteStatus status, String lineWorld, String stopWorld) {
+    public static final class AddStopResult {
+        private final WriteStatus status;
+        private final String lineWorld;
+        private final String stopWorld;
+
+        public AddStopResult(WriteStatus status, String lineWorld, String stopWorld) {
+            this.status = status;
+            this.lineWorld = lineWorld;
+            this.stopWorld = stopWorld;
+        }
+
+        public WriteStatus status() {
+            return status;
+        }
+
+        public String lineWorld() {
+            return lineWorld;
+        }
+
+        public String stopWorld() {
+            return stopWorld;
+        }
+
         static AddStopResult of(WriteStatus status) {
             return new AddStopResult(status, null, null);
         }
@@ -53,7 +74,22 @@ public class LineCommandService {
         }
     }
 
-    public record ClearRouteResult(WriteStatus status, int previousPointCount) {
+    public static final class ClearRouteResult {
+        private final WriteStatus status;
+        private final int previousPointCount;
+
+        public ClearRouteResult(WriteStatus status, int previousPointCount) {
+            this.status = status;
+            this.previousPointCount = previousPointCount;
+        }
+
+        public WriteStatus status() {
+            return status;
+        }
+
+        public int previousPointCount() {
+            return previousPointCount;
+        }
     }
 
     public WriteStatus createLine(String id, String name, UUID ownerId) {
@@ -70,7 +106,7 @@ public class LineCommandService {
     public List<Line> listLines() {
         return lineManager.getAllLines().stream()
                 .sorted(Comparator.comparing(Line::getId))
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public WriteStatus renameLine(String id, String name) {
@@ -98,7 +134,7 @@ public class LineCommandService {
     public AddStopResult addStopToLine(Line line, Stop stop, Integer index) {
         String stopWorld = stop.getWorldName();
         String lineWorld = line.getWorldName();
-        if (stopWorld == null || stopWorld.isBlank()) {
+        if (stopWorld == null || stopWorld.trim().isEmpty()) {
             return AddStopResult.of(WriteStatus.STOP_NO_WORLD);
         }
         if (lineWorld != null && !lineWorld.equals(stopWorld)) {
@@ -141,7 +177,7 @@ public class LineCommandService {
     }
 
     public WriteStatus removePortalFromLine(Line line, String portalId) {
-        if (line == null || portalId == null || portalId.isBlank()) {
+        if (line == null || portalId == null || portalId.trim().isEmpty()) {
             return WriteStatus.FAILED;
         }
         if (!line.containsPortal(portalId)) {
@@ -200,14 +236,28 @@ public class LineCommandService {
         return lineManager.setLineTicketPrice(id, price) ? WriteStatus.SUCCESS : WriteStatus.FAILED;
     }
 
-    public WriteStatus setPriceRule(String id, String mode, double basePrice, Double perUnit, Double maxPrice) {
-        if (basePrice < 0.0 || (perUnit != null && perUnit < 0.0) || (maxPrice != null && maxPrice < 0.0)) {
+    // =============================================================
+    // Fare Rule Operations
+    // =============================================================
+
+    /**
+     * Set or update the fare rule for a line.
+     *
+     * @param id       line ID
+     * @param mode     pricing mode: "flat", "distance", or "interval"
+     * @param baseFare base fare amount
+     * @param perUnit  per-block rate (distance) or per-interval rate (interval)
+     * @param maxFare  maximum fare cap (null = no cap, 0+ = cap)
+     * @return write status
+     */
+    public WriteStatus setFareRule(String id, String mode, double baseFare, Double perUnit, Double maxFare) {
+        if (baseFare < 0.0 || (perUnit != null && perUnit < 0.0) || (maxFare != null && maxFare < 0.0)) {
             return WriteStatus.INVALID_VALUE;
         }
 
-        PriceRule.PricingMode pricingMode;
+        FareRule.PricingMode pricingMode;
         try {
-            pricingMode = PriceRule.PricingMode.valueOf(mode.toUpperCase());
+            pricingMode = FareRule.PricingMode.valueOf(mode.toUpperCase());
         } catch (IllegalArgumentException e) {
             return WriteStatus.INVALID_VALUE;
         }
@@ -217,30 +267,47 @@ public class LineCommandService {
             return WriteStatus.NOT_FOUND;
         }
 
-        PriceRule rule = new PriceRule(pricingMode, basePrice);
-        if (pricingMode == PriceRule.PricingMode.DISTANCE && perUnit != null) {
+        FareRule rule = new FareRule(pricingMode, baseFare);
+        if (pricingMode == FareRule.PricingMode.DISTANCE && perUnit != null) {
             rule.setPerBlockRate(perUnit);
         }
-        if (pricingMode == PriceRule.PricingMode.INTERVAL && perUnit != null) {
+        if (pricingMode == FareRule.PricingMode.INTERVAL && perUnit != null) {
             rule.setPerIntervalRate(perUnit);
         }
-        if (maxPrice != null && maxPrice > 0.0) {
-            rule.setMaxPrice(maxPrice);
+        if (maxFare != null && maxFare > 0.0) {
+            rule.setMaxFare(maxFare);
         }
 
-        line.setPriceRule(rule);
+        line.setFareRule(rule);
         lineManager.saveConfig();
         return WriteStatus.SUCCESS;
     }
 
-    public boolean resetPriceRule(String id) {
+    /**
+     * Remove the fare rule from a line, reverting to legacy flat pricing.
+     *
+     * @param id line ID
+     * @return true if successful
+     */
+    public boolean resetFareRule(String id) {
         Line line = lineManager.getLine(id);
         if (line == null) return false;
-        line.setPriceRule(null);
+        line.setFareRule(null);
         lineManager.saveConfig();
         return true;
     }
 
+    // =============================================================
+    // Line Status Operations
+    // =============================================================
+
+    /**
+     * Set the operational status of a line.
+     *
+     * @param id     line ID
+     * @param status status string: "normal", "suspended", "maintenance"
+     * @return write status
+     */
     public WriteStatus setLineStatus(String id, String status) {
         LineStatus lineStatus = LineStatus.fromConfig(status);
         if (lineStatus == LineStatus.NORMAL && !status.equalsIgnoreCase("normal")) {
@@ -252,17 +319,22 @@ public class LineCommandService {
             return WriteStatus.NOT_FOUND;
         }
 
-        LineStatus oldStatus = line.getLineStatus();
-        if (oldStatus == lineStatus) {
-            return WriteStatus.SUCCESS;
-        }
-
         line.setLineStatus(lineStatus);
-        Bukkit.getPluginManager().callEvent(new LineStatusChangeEvent(line, oldStatus, lineStatus));
         lineManager.saveConfig();
         return WriteStatus.SUCCESS;
     }
 
+    // =============================================================
+    // Alternative Route Operations
+    // =============================================================
+
+    /**
+     * Add an alternative route to a line (suggested when line is suspended).
+     *
+     * @param id       line ID
+     * @param altLineId alternative line ID
+     * @return true if added successfully
+     */
     public boolean addAlternativeRoute(String id, String altLineId) {
         Line line = lineManager.getLine(id);
         if (line == null) return false;
@@ -273,6 +345,13 @@ public class LineCommandService {
         return result;
     }
 
+    /**
+     * Remove an alternative route from a line.
+     *
+     * @param id       line ID
+     * @param altLineId alternative line ID to remove
+     * @return true if removed successfully
+     */
     public boolean removeAlternativeRoute(String id, String altLineId) {
         Line line = lineManager.getLine(id);
         if (line == null) return false;
@@ -283,6 +362,17 @@ public class LineCommandService {
         return result;
     }
 
+    // =============================================================
+    // Suspension Message Operations
+    // =============================================================
+
+    /**
+     * Set the message shown to players when trying to board a suspended line.
+     *
+     * @param id      line ID
+     * @param message suspension message
+     * @return true if set successfully
+     */
     public boolean setSuspensionMessage(String id, String message) {
         Line line = lineManager.getLine(id);
         if (line == null) return false;
@@ -293,7 +383,7 @@ public class LineCommandService {
 
     public boolean isValidId(String id) {
         return id != null
-                && !id.isBlank()
+                && !id.trim().isEmpty()
                 && id.length() <= MAX_ID_LENGTH
                 && ID_PATTERN.matcher(id).matches();
     }
